--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "co.skliba.rideme"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,11 +20,82 @@ android {
     }
 }
 
+ext {
+    supportVersion = "27.1.1"
+    constraintLayoutVersion = "1.0.2"
+    multiDexVersion = "1.0.3"
+    firebaseJobDispatcherVersion = "0.8.5"
+    firebaseVersion = "12.0.1"
+    mapsUtilsVersion = "0.5"
+    retrofitVersion = "2.4.0"
+    okhttpLoggingInterceptor = "3.8.1"
+    glideVersion = "3.8.0"
+    daggerVersion = "2.14"
+    threeTenVersion = "1.0.5"
+    easyPermissionsVersion = "1.0.1"
+    gsonVersion = "2.8.2"
+    rxJavaVersion = "2.1.4"
+    rxKotlinVersion = "2.1.0"
+    rxAndroidVersion = "2.0.1"
+    timberVersion = "4.5.1"
+}
+
+
 dependencies {
+
+    // Local
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    // Support
+    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation "com.android.support:design:$supportVersion"
+    implementation "com.android.support:multidex:$multiDexVersion"
+    implementation "com.android.support:customtabs:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
+
+    // Google maps utils
+    implementation "com.google.android.gms:play-services-location:$firebaseVersion"
+    implementation "com.firebase:firebase-jobdispatcher:$firebaseJobDispatcherVersion"
+    implementation "com.google.maps.android:android-maps-utils:$mapsUtilsVersion"
+
+    // Networking
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpLoggingInterceptor"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    // Dagger
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
+
+    // Rx
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
+
+    // Development
+    implementation "com.jakewharton.threetenabp:threetenabp:$threeTenVersion"
+    // here because Unit tests break when you don't have this in the project - https://github.com/JakeWharton/ThreeTenABP/issues/14
+    testImplementation("org.threeten:threetenbp:$threeTenVersion") {
+        exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
+    }
+
+    // Permissions
+    implementation "pub.devrel:easypermissions:$easyPermissionsVersion"
+
+    // Logging
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+
+    // Tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
