--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
+
+    def STRING = 'String'
+    def BOOLEAN = 'Boolean'
+
     compileSdkVersion 27
     defaultConfig {
         applicationId "co.skliba.rideme"
@@ -12,11 +17,59 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        release {
+            Properties props = new Properties()
+            if (file('../local.properties').exists()) {
+                // if it doesn't exist, the props will all be null and the production builds will fail
+                props.load(new FileInputStream(file('../local.properties')))
+            }
+
+            storeFile file(defaultConfig.applicationId + '.jks')
+            storePassword props['keystore.storePass']
+            keyAlias props['keystore.keyAlias']
+            keyPassword props['keystore.keyPass']
+        }
+
+        development {
+            keyAlias 'development'
+            storeFile file('development.jks')
+            storePassword 'rideMeDevelopment'
+            keyPassword 'rideMeDevelopment'
+        }
+    }
+
     buildTypes {
+        debug {
+            debuggable true
+            signingConfig signingConfigs.development
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    flavorDimensions 'api'
+
+    productFlavors {
+        staging {
+            dimension 'api'
+            applicationIdSuffix '.staging'
+            signingConfig signingConfigs.development
+        }
+
+        production {
+            dimension 'api'
+            signingConfig signingConfigs.release
+        }
+
+    }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
     }
 }
 
@@ -30,7 +83,7 @@ ext {
     retrofitVersion = "2.4.0"
     okhttpLoggingInterceptor = "3.8.1"
     glideVersion = "3.8.0"
-    daggerVersion = "2.14"
+    daggerVersion = "2.14.1"
     threeTenVersion = "1.0.5"
     easyPermissionsVersion = "1.0.1"
     gsonVersion = "2.8.2"
@@ -39,7 +92,6 @@ ext {
     rxAndroidVersion = "2.0.1"
     timberVersion = "4.5.1"
 }
-
 
 dependencies {
 
@@ -88,6 +140,9 @@ dependencies {
     testImplementation("org.threeten:threetenbp:$threeTenVersion") {
         exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
     }
+
+    // Ui
+    implementation 'com.eftimoff:android-pathview:1.0.8@aar'
 
     // Permissions
     implementation "pub.devrel:easypermissions:$easyPermissionsVersion"
